compiler/testData/diagnostics/tests/inner/annotationInInnerClass.fir.kt
class Outer {
    inner class Inner {
        annotation <!NESTED_CLASS_NOT_ALLOWED!>class TestNestedAnnotation<!>
    }
}
